fix: #813 Datepicker z-index behind dropdown

--- a/css/scss/element/_project-list.scss
+++ b/css/scss/element/_project-list.scss
@@ -388,3 +388,8 @@ body:has(.saturne-kpi-cards) .totalnboflines {
         }
     }
 }
+
+// Fix z-index for jQuery UI datepicker in Saturne dropdowns
+#ui-datepicker-div {
+    z-index: 9999 !important;
+}
